# EchoQuill

./: .flake8  README.md  example.py  pyproject.toml  setup.py
.github/workflows/: python-package.yml
equill/: __init__.py  logger.py
pytest/: test_logger.py
